# pod2spm

./: .gitignore  LICENSE  README.md  pod2spm.gemspec  pyproject.toml
Formula/: pod2spm.rb
exe/: pod2spm
lib/: pod2spm.rb
lib/pod2spm/: build.rb  cli.rb  detect.rb  errors.rb  package_gen.rb  podfile.rb  shell.rb  ui.rb  version.rb  versions.rb  wrap.rb
spec/: build_spec.rb  cli_spec.rb  detect_spec.rb  package_gen_spec.rb  podfile_spec.rb  shell_spec.rb  spec_helper.rb  versions_spec.rb  wrap_spec.rb
src/pod2spm/: __init__.py  build.py  cli.py  detect.py  package_gen.py  podfile.py  versions.py  wrap.py
src/pod2spm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_detect.py  test_package_gen.py  test_podfile.py
