[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pod2spm"
version = "0.1.0"
description = "CLI tool to wrap CocoaPods as Swift Package Manager binary packages"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Charan Ganesh" }]
keywords = ["cocoapods", "spm", "swift", "xcode", "xcframework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.9.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
]

[project.scripts]
pod2spm = "pod2spm.cli:app"

[project.urls]
Homepage = "https://github.com/charanganesh/pod2spm"
Repository = "https://github.com/charanganesh/pod2spm"

[tool.setuptools.packages.find]
where = ["src"]
